Basic homepage completed

--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,139 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
+        <header>
+            <nav style="color: black; text-align: center"
+                >
+                <a href="#intro">Intro</a> |
+                <a href="#tech">Technical skills</a> |
+                <a href="#project">Projects</a> |
+                <a href="#hobby">Hobby</a> | 
+                <a href="#contact">Contacts</a>
+            </nav>
+            <h1 id="intro">Bayezid Mahmud</h1>
+            <img width="200" height="200" src="./byzddd.jpg" >
+            <br>
+            <audio controls="" autoplay = false>
+                <source src="Recording (5).m4a" type="audio/mp4">
+            </audio>
+            <div>
+                <i>Software engineering in Tampere University of Applied Sciences</i><br>
+                <a href="bayezid.mahmud@integrify.io"><i>bayezid.mahmud@integrify.io</i></a><br>
+                <a href="+358406682350"><i>+358406682350</i></a><br>
+                <i>Tampere, Finland</i><br>
+            </div>
+            <p>
+                I am studying software engineering in Tampere University of Applied Sciences. I have experience with JavaScript,
+                MongoDB, NodeJS, ReactJS and other language like C, C++ and Java. I am always motivated to make appliaction using them.
+                I also have strong communication skills, am a quick learner, and take pleasure in working with others.
+            </p>
+            <h2>Places I have been</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>City</th>
+                        <th>Country</th>
+                        <th>Duration</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>ChapaiNawabganj</td>
+                        <td>Bangladesh</td>
+                        <td>13 years</td>
+                    </tr>
+                    <tr>
+                        <td>Rajshahi</td>
+                        <td>Bangladesh</td>
+                        <td>9 years</td>
+                    </tr>
+                    <tr>
+                        <td>Tampere</td>
+                        <td>Finland</td>
+                        <td>1 years</td>
+                    </tr>
+                </tbody>
+            </table>
+        </header>
+        <hr>
+        <section>
+            <h2 id="tech">Technical Skills</h2>
+            <ol>
+                <li>Frontend
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>                        
+                        <li>React</li>
+                    </ul>
+                </li>
+                <li>Backend
+                    <ul>
+                        <li>NodeJS</li>
+                        <li>Express</li>
+                        <li>Spring Boot</li>
+                        <li>RestAPI</li>
+                        <li>MongoDB/MySQL</li>
+                    </ul>
+                </li>
+                <li>DevOps</li>
+                <li>Bash Script</li>
+                <li>Docker</li>              
+                <li>Other programming languages: C, C++, Java</li>
+                <li>Mobile app development: AndrioidStudio, React Native, Flutter</li>
+            </ol>
+        </section>
+        <hr>
+        <section>
+            <h2 id="project">Personal Project</h2>
+            <ul>
+                <li>MoviewHub - <i>Specially frontend project using ReactJS</i></li>
+                <li>Authentication_MERN - <i>A fullstack project having both frontend and backend</i></li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2 id="hobby">My Hobby</h2>
+            <ul>
+                <li>Driving</li>
+                <li>Watching series</li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2 id="contact">Contact me</h2>
+            <form>
+                <div>
+                    <label for="name">Enter full name</label><br>
+                    <input type="text" name="name" id="name" placeholder="firstname and lastname">
+                </div>
+                <div>
+                    <label for="email">Enter email</label><br>
+                    <input type="email" name="email" id="email" placeholder="name@gmail.com">
+                </div>
+                <div>
+                    <label>Subject</label><br>
+                    <select>
+                        <option value="sb1">Interview</option>
+                        <option value="sb2">Coding</option>
+                        <option value="sb3">Offer</option>
+                    </select>
+                </div>
+                <div>
+                    <label>Explain briefly about you subject</label><br>
+                    <textarea cols="50" rows="5"></textarea>
+                </div>
+                <div>
+                    <label for="screenshot">Add a picture if you want(jpeg)</label>
+                    <input type="file" accept="image/jpeg">
+                </div>
+                <button type="submit">Send request</button>
+            </form>
+        </section>
+        <hr>
+        <footer>
+            ©Author: Bayezid Mahmud,
+            LD, FB, Instra
+        </footer>
+    </body>
 </html>
